--- a/objects/index.html
+++ b/objects/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Object methods</title>
+    <link rel="icon" href="data:,">
     <script src="objects.js" defer></script>
   </head>
   <body></body>
