took the style our into style.css

--- a/browserOut/index.html
+++ b/browserOut/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Classes</title>
+    <title>Shop Browser Output</title>
+    <link rel="stylesheet" href="style.css">
     <link rel="icon" href="data:,">
     <script type = "module" src = "browserClasses.js"></script>
     <script type = "module" src = "browserStock.js"></script>
