--- a/objects/index.html
+++ b/objects/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Object methods</title>
+    <title>Objects and methods</title>
     <link rel="icon" href="data:,">
     <script src="objects.js" defer></script>
   </head>
